@@ -1,4 +1,8 @@
 This file lists the incompatible changes between Version 2.x and older versions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  - the member function bnf.futu and .tufu (deprecated since 2.2) have been
+    removed. If needed, write your own helper function using bnf.fu and bnf.tu.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the bid struct from idealstar has changed, the new format is not
     compatible with pari-2.9
