@@ -1,5 +1,0 @@
-Function: _.futu
-Help: _.futu
-Section: member_functions
-C-Name: member_futu
-Prototype: mG
