@@ -1,5 +1,0 @@
-Function: _.tufu
-Help: _.tufu
-Section: member_functions
-C-Name: member_tufu
-Prototype: mG
