@@ -276,7 +276,7 @@ Doc:
 
  \+\tet{disc} &(\var{bnr},& \var{bnf},& \var{nf}&)&: & discriminant.\cr
 
- \+\tet{fu}   &(\var{bnr},& \var{bnf}&&)&: & \idx{fundamental units}.\cr
+ \+\tet{fu}   &(          & \var{bnf}&&)&: & \idx{fundamental units}.\cr
 
  \+\tet{index}   &(\var{bnr},& \var{bnf},& \var{nf}&)&: &
   \idx{index} of the power order in the ring of integers.\cr
@@ -293,7 +293,7 @@ Doc:
  \+\tet{r2} &(\var{bnr},& \var{bnf},& \var{nf}&)&: & the number
  of pairs of complex embeddings.\cr
 
- \+\tet{reg}  &(\var{bnr},& \var{bnf}&&)&: & regulator.\cr
+ \+\tet{reg}  &(          & \var{bnf}&&)&: & regulator.\cr
 
  \+\tet{roots}&(\var{bnr},& \var{bnf},& \var{nf}&)&: & roots of the
  polynomial generating the field.\cr
@@ -303,7 +303,7 @@ Doc:
  \+\tet{t2}   &(\var{bnr},& \var{bnf},& \var{nf}&)&: & the $T_2$ matrix (see
  \kbd{nfinit}).\cr
 
- \+\tet{tu}   &(\var{bnr},& \var{bnf}&&)&: & a generator for the torsion
+ \+\tet{tu}   &(          & \var{bnf}&&)&: & a generator for the torsion
  units.\cr
 
  \+\tet{zk}   &(\var{bnr},& \var{bnf},& \var{nf}&)&: & integral basis, i.e.~a
@@ -314,16 +314,6 @@ Doc:
  The member functions \kbd{.codiff}, \kbd{.t2} and \kbd{.zk} perform a
  computation and are relatively expensive in large degree: move them out of
  tight loops and store them in variables.
-
- \misctitle{Deprecated} The following member functions are still available, but deprecated and should not be used in new scripts :
- \+\tet{futu} &(\var{bnr},& \var{bnf},&&)&: &
-  $[u_1,...,u_r,w]$, $(u_i)$ is a vector of fundamental units,\cr
- \+&&&&&& $w$ generates the torsion units.\cr
-
- \+\tet{tufu} &(\var{bnr},& \var{bnf},&&)&: &
-  $[w,u_1,...,u_r]$, $(u_i)$ is a vector of fundamental units,\cr
- \+&&&&&& $w$ generates the torsion units.\cr
-
 
    For instance, assume that $\var{bnf} = \kbd{bnfinit}(\var{pol})$, for some
  polynomial. Then \kbd{\var{bnf}.clgp} retrieves the class group, and
