@@ -4020,7 +4020,6 @@ GEN     member_e(GEN x);
 GEN     member_eta(GEN x);
 GEN     member_f(GEN x);
 GEN     member_fu(GEN x);
-GEN     member_futu(GEN x);
 GEN     member_gen(GEN x);
 GEN     member_group(GEN x);
 GEN     member_index(GEN x);
@@ -4040,7 +4039,6 @@ GEN     member_roots(GEN x);
 GEN     member_sign(GEN x);
 GEN     member_t2(GEN x);
 GEN     member_tate(GEN x);
-GEN     member_tufu(GEN x);
 GEN     member_tu(GEN x);
 GEN     member_zk(GEN x);
 GEN     member_zkst(GEN bid);
